# OBSSharedMemoryPlugin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
CI/include/: build_environment.ps1  build_environment.sh  build_support_windows.ps1
src/: plugin-macros.h.in  plugin-main.c
src/SharedImage/: sharedmem.c
src/SharedImage/arch/: sharedmemwin.c
